properly fetching materials data

--- a/index.css
+++ b/index.css
@@ -8,5 +8,5 @@
     background: rgba(48, 233, 48, 0.703);
     padding: 15px 20px 18px 18px;
     border-radius: 5px;
-    box-shadow: 5px 5px 5px #333;
+    box-shadow: 5px 5px 5px #4cec24;
   }
