--- a/index.css
+++ b/index.css
@@ -9,4 +9,11 @@
     padding: 15px 20px 18px 18px;
     border-radius: 5px;
     box-shadow: 5px 5px 5px #4cec24;
-  }
+}
+
+#imageContainer {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    justify-content: center; 
+    align-items: center; 
+}
