--- a/index.css
+++ b/index.css
@@ -17,3 +17,16 @@
     justify-content: center; 
     align-items: center; 
 }
+
+.tooltip {
+    position: absolute;
+    display: none;
+    background-color: rgba(0, 0, 0, 0.8);
+    color: white;
+    padding: 5px;
+    border-radius: 3px;
+}
+  
+  .tooltip.visible {
+    display: block;
+}
