--- a/index.css
+++ b/index.css
@@ -12,8 +12,9 @@
 }
 
 #imageContainer {
+    position: relative;
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(4, 1fr);
     justify-content: center; 
     align-items: center; 
 }
