--- a/index.css
+++ b/index.css
@@ -32,3 +32,17 @@
   .tooltip.visible {
     display: block;
 }
+
+.locationDiv {
+    position: absolute;
+    display: none;
+    background-color: rgba(0, 0, 0, 0.8);
+    color: white;
+    padding: 5px;
+    border-radius: 3px;
+    box-sizing: border-box;
+}
+
+.locationDiv.visibleLocation {
+    display: block;
+}
